# Reclaimerr

./: .env.example  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  index.html  mkdocs.yml  notes-todo.md  pyproject.toml  search.json  sitemap.xml  tst.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: desktop.yml  docker.yml  docs.yml  frontend.yml  mypy.yml  ruff.yml  typecheck.yml
backend/: models.py  scheduler.py
backend/alembic/: README.md
backend/alembic/versions/: 0a1b2c3d4e5f_add_episode_scope_to_requests_and_protected.py  0ddab1295d26_merge_heads_after_branch_merge.py  1201d9f4dfa6_add_relcaim_history_table.py  1b25d7fd62d3_nullable_year.py  1b2c3d4e5f6a_add_request_scope_snapshots.py  1c2d7f9b6a41_add_season_audio_languages.py  1d7c9e4a6b2f_split_external_ratings_tasks.py  1fa2d369153d_remove_auto_tag_enabled_from_settings.py  20666951d75d_add_emby_support_and_emby_season_id_to_.py  23235d08ddc8_add_episode_name.py  2a9c4e1b7d3f_add_movie_tmdb_collection_fields.py  2c3d4e5f6a7b_add_default_arr_delete_behavior.py  2f4e6d8c1b0a_add_imdb_ratings_cache_and_task.py  3a1b9d7e5c4f_add_anilist_supplemental_ratings_and_task.py  3d4e5f6a7b8c_add_candidate_file_op_job_type.py  4c7d9e1f2a3b_add_requester_watch_snapshot_and_mappings.py  4f1a2b3c4d5e_add_reclaim_history_attributes.py  5a6b7c8d9e0f_add_admin_notices.py  5a8c2e7d9f10_repair_legacy_external_rating_tasks.py  5f8a2c1d7e9b_add_leaving_soon_general_settings.py  6b0e8c2d4f91_add_advanced_reclaim_rule_definition.py  6c4d5e7f8a9b_add_leaving_soon_last_success_titles.py  7b3d5f9a1c2e_add_arr_added_dates.py  7d9e1a2b3c4d_add_user_sessions_table.py  7f9a1c2d3e4b_add_media_favorites_snapshot_and_settings.py  84e8889cda26_remove_auto_tag_suffix_settings.py  8e7d6c5b4a3f_add_arr_import_exclusion_delete_setting.py  (+51 more)
backend/api/: candidate_views.py  main.py
backend/core/: __version__.py  anilist.py  api_tokens.py  auth.py  auto_delete.py  clients.py  codecs.py  encryption.py  imdb.py  imdb_cache.py  logger.py  memory.py  oidc.py  rule_engine.py  service_bootstrap.py  service_manager.py  service_runtime.py  settings.py  setup_state.py  task_child.py  task_process.py  task_runtime.py  task_tracking.py  tmdb.py  worker.py  workflow_locks.py
backend/database/: __init__.py  models.py
backend/enums/: __init__.py  alerts.py  logging.py  media.py  services.py  tasks.py  users.py
backend/jobs/: __init__.py  candidate_file_ops.py  policy.py  queue.py  runner.py
backend/models/: alerts.py  auth.py  blacklist.py  cleanup.py  dashboard.py  info.py  integrations.py  jobs.py  lifecycle_events.py  media.py  post_action_webhooks.py  protect.py  requests.py  rules.py  settings.py  setup.py
backend/services/: admin_notices.py  candidate_lifecycle.py  emby.py  emby_base.py  external_ratings.py  jellyfin.py  lifecycle_webhooks.py  media_auth.py  media_favorites_cache.py  media_watch_snapshot_cache.py  notifications.py  playback_history.py  plex.py  post_action_webhooks.py  radarr.py  seerr.py  seerr_cache.py  sonarr.py  tautulli.py  webhook_transport.py
backend/tasks/: anilist.py  cleanup.py  external_ratings.py  house_keeping.py  imdb.py  sync.py  task_tracker.py  update_check.py
backend/types/: __init__.py  media_servers.py
backend/user_types/: __init__.py  media.py  users.py
backend/utils/: create_admin.py  helpers.py
backend/worker/: __main__.py  work.py
deployment/backups/: index.html
deployment/docker/: index.html
deployment/production/: index.html
deployment/swag/: index.html
desktop/: __main__.py  server.py  tray.py  utils.py
development/architecture/: index.html
development/contributing/: index.html
development/migrations/: index.html
development/release-process/: index.html
docker/: .env.example  compose.example.yml  entrypoint.sh
docs/: CONTRIBUTING.md  features.md  index.md
docs/deployment/: backups.md  docker.md  production.md  swag.md
docs/development/: architecture.md  contributing.md  migrations.md  release-process.md
docs/getting-started/: configuration.md  index.md  installation.md
docs/reference/: api.md  changelog.md  faq.md  internal-api.md  troubleshooting.md
docs/reverse-proxy/: swag.md
docs/usage/: deletion-flow.md  how-it-works.md  rules.md  tasks.md
features/: index.html
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  app.svelte  main.ts
getting-started/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
reference/api/: index.html
reference/changelog/: index.html
reference/faq/: index.html
reference/troubleshooting/: index.html
scripts/: build_desktop.py
tests/: conftest.py  test_account_sessions.py  test_application_url.py  test_arr_added_dates.py  test_auto_delete_task.py  test_background_job_pool.py  test_background_job_priority_migration.py  test_candidate_file_op_jobs.py  test_candidates_pagination.py  test_cleanup_media_rules.py  test_dashboard.py  test_database_sqlite.py  test_emby_series_inventory.py  test_external_api_v1.py  test_external_candidate_api.py  test_external_ratings.py  test_external_ratings_tasks.py  test_imdb.py  test_info_changelog.py  test_language_normalization.py  test_leaving_soon_deletion_guard.py  test_legacy_external_ratings_migration.py  test_lifecycle_webhooks.py  test_media_auth_identity.py  test_media_auth_plex_access.py  test_media_favorites_cache_plex.py  test_media_server_collection_rules.py  test_media_watch_snapshot_cache.py  test_metadata_provider_status.py  test_movie_version_radarr_delete_routing.py  test_movies_collection_fields.py  test_oidc_auth.py  test_page_access.py  test_path_mappings_and_webhooks.py  test_physical_tv_inventory.py  test_playback_history.py  test_plex_pagination.py  test_protection_request_scope.py  test_proxy_headers.py  test_reclaim_history.py  (+14 more)
usage/deletion-flow/: index.html
usage/how-it-works/: index.html
usage/rules/: index.html
usage/tasks/: index.html
(+215 files in other folders)
