[project]
name = "reclaimerr"
version = "0.1.6"
description = "Backend of Reclaimerr"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "apprise>=1.11.0",
    "apscheduler>=3.11.2,<4.0.0",
    "argon2-cffi>=25.1.0",
    "authlib>=1.6.5",
    "cryptography>=48.0.0",
    "fastapi[standard]>=0.136.2",
    "granian>=2.7.7",
    "itsdangerous>=2.2.0",
    "niquests[speedups]>=3.19.1",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "python-iso639>=2026.4.20",
    "python-dotenv>=1.2.2",
    "semver>=3.0.4",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.49",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "mypy",
    "basedpyright>=1.39.3",
    "pytest>=9.0.3",
    "ruff>=0.14.10",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
desktop = [
    "pyinstaller",
    "pystray",
    "platformdirs>=4.9.6",
    "filelock>=3.16.0",
    "uvicorn>=0.41.0",
]
docs = ["zensical", "pymdown-extensions"]

[project.urls]
Homepage = "https://github.com/jessielw/Reclaimerr"
Source = "https://github.com/jessielw/Reclaimerr"
Documentation = "https://jessielw.github.io/Reclaimerr"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/core", "backend/api", "backend/services"]

[tool.ruff]
line-length = 88
target-version = "py311"
include = [
    "backend/core/**/*.py",
    "backend/api/**/*.py",
    "backend/services/**/*.py",
    "desktop/**/*.py",
    "scripts/**/*.py",
]
exclude = ["backend/alembic/**/versions/*.py"]

[tool.ruff.lint]
select = ["I", "UP"]

[tool.basedpyright]
include = ["backend"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
namespace_packages = true
explicit_package_bases = true
files = ["backend", "desktop"]
exclude = '''
(?x)(
    ^backend/alembic/|
    ^backend/types/|
    ^scripts/build_desktop\.py$
)
'''

[[tool.mypy.overrides]]
module = [
    "authlib.*",
    "apscheduler.*",
    "pystray.*",
    "platformdirs.*",
    "filelock.*",
]
ignore_missing_imports = true
