[project]
name = "reclaimerr"
version = "0.3.0"
description = "Backend of Reclaimerr"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "apprise>=1.12.0",
    "apscheduler>=3.11.3,<4.0.0",
    "argon2-cffi>=25.1.0",
    "authlib>=1.7.2",
    "cryptography>=49.0.0",
    "fastapi[standard]>=0.139.2",
    "granian>=2.7.9",
    "itsdangerous>=2.2.0",
    "niquests[speedups]>=3.20.1",
    "pillow>=12.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-iso639>=2026.4.20",
    "python-dotenv>=1.2.2",
    "semver>=3.0.4",
    "slowapi>=0.1.10",
    "sqlalchemy[asyncio]>=2.0.51",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "mypy",
    "basedpyright>=1.39.9",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "uvicorn>=0.51.0",
]

[project.optional-dependencies]
desktop = [
    "pyinstaller>=6.21.0",
    "pystray>=0.19.5",
    "platformdirs>=4.10.1",
    "filelock>=3.30.3",
    "uvicorn>=0.51.0",
]
docs = ["zensical>=0.0.51", "pymdown-extensions>=11.0.1"]

[project.urls]
Homepage = "https://github.com/jessielw/Reclaimerr"
Source = "https://github.com/jessielw/Reclaimerr"
Documentation = "https://jessielw.github.io/Reclaimerr"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/core", "backend/api", "backend/services"]

[tool.ruff]
line-length = 88
target-version = "py311"
include = [
    "backend/core/**/*.py",
    "backend/api/**/*.py",
    "backend/services/**/*.py",
    "desktop/**/*.py",
    "scripts/**/*.py",
]
exclude = ["backend/alembic/**/versions/*.py"]

[tool.ruff.lint]
select = ["I", "UP"]

[tool.basedpyright]
include = ["backend"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
namespace_packages = true
explicit_package_bases = true
files = ["backend", "desktop"]
exclude = '''
(?x)(
    ^backend/alembic/|
    ^backend/types/|
    ^scripts/build_desktop\.py$
)
'''

[[tool.mypy.overrides]]
module = [
    "authlib.*",
    "apscheduler.*",
    "pystray.*",
    "platformdirs.*",
    "filelock.*",
]
ignore_missing_imports = true
